# RoboMasterGym

./: .gitignore  LICENSE  README.md
assets/Armor_Robot/: CMakeLists.txt  package.xml
assets/Armor_Robot/launch/: gazebo.launch
assets/Armor_Robot/meshes/: Armor_board_link_3.STL  Armor_board_link_4.STL  Armor_light_link_2.STL  Armor_light_link_3.STL  Armor_light_link_4.STL  base_link.STL  body_link.STL
assets/Exchange_Station/launch/: display.launch
assets/Exchange_Station/meshes/: L2.STL  L3.STL  L4.STL  L5.STL  L6.STL  L_RFID.STL  L_base.STL  L_lighit.STL
assets/Exchange_Station/urdf/: Exchange_Station.csv  Exchange_Station.urdf
assets/urdf/Armor_Robot/config/: joint_names_Armor_Robot.yaml
assets/urdf/Armor_Robot/launch/: display.launch
assets/urdf/Armor_Robot/meshes/: Armor_board_link_1.STL  Armor_board_link_2.STL  Armor_board_link_3.STL  Armor_board_link_4.STL  Armor_light_link_1.STL  Armor_link_1.STL  (+9 more)
assets/urdf/Buff/: CMakeLists.txt  package.xml
assets/urdf/Engineer_Robot/: CMakeLists.txt  package.xml
assets/urdf/Exchange_Station/: CMakeLists.txt  package.xml
assets/urdf/Gold/: CMakeLists.txt  package.xml
assets/urdf/Gold/launch/: display.launch  gazebo.launch
assets/urdf/Gold/meshes/: RL1.STL  RL3.STL  RL4.STL  RL5.STL  RL6.STL  Rl2.STL  base_link.STL
assets/urdf/Gold/urdf/: Gold.csv  Gold.urdf
assets/urdf/Gold_Ore/: CMakeLists.txt  package.xml
assets/urdf/RMUC2025/: CMakeLists.txt  package.xml
assets/urdf/Wheelleg_Robot/: CMakeLists.txt  package.xml
python/examples/: AutoAimGym.py  EngineerExchange.py  ImportTest.py
(+85 files in other folders)
